<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.eduweb.colorpalette.ColorActivity">

    <LinearLayout
        android:id="@+id/colorLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/redLabel"
            style="@style/LabelStyle"
            android:text="@string/red" />

        <SeekBar
            android:id="@+id/redSeekBar"
            style="@style/ColorSeekBarStyle" />

        <TextView
            android:id="@+id/greenLabel"
            style="@style/LabelStyle"
            android:text="@string/green" />

        <SeekBar
            android:id="@+id/greenSeekBar"
            style="@style/ColorSeekBarStyle" />

        <TextView
            android:id="@+id/blueLabel"
            style="@style/LabelStyle"
            android:text="@string/blue" />

        <SeekBar
            android:id="@+id/blueSeekBar"
            style="@style/ColorSeekBarStyle" />

        <Button
            android:id="@+id/generateButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="20dp"
            android:text="@string/generate" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>